// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List editor plugins.renderNode renders a button when passed 1`] = `
<List
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List",
    }
  }
/>
`;

exports[`List editor plugins.renderNode renders a button when passed 2`] = `
<Level
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List.Level",
    }
  }
/>
`;

exports[`List editor plugins.renderNode renders a button when passed 3`] = `
<Line
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List.Line",
    }
  }
/>
`;
